# novacomd

./: CMakeLists.txt  NOTICE  README.md  makefile  novacomd-device-upstart
files/launch/device/: novacomd.conf.in  novacomd.in
files/launch/emulator/: novacomd.conf.in  novacomd.in
files/launch/host/: novacomd.conf.in  novacomd.in
include/: buf_queue.h  buffer.h  debug.h  log.h  novacom.h  platform.h  transport.h  transport_inet.h  transport_usb.h
include/device/: auth.h
include/host/: novacom_host.h
include/lib/: cksum.h
installers/linux/scripts/: novacomd-conf  novacomd-upstart
scripts/: novacomd-upstart
src/: log.c  main.c  novacomd_p.h  platform_other.c  platform_pthreads.c  socket.c  transport.c  transport_inet.c  transport_usb.c  transport_usb_struct.h
src/device/: auth.c  commands_service.c  descriptors.h  usb-gadget.c  usb_gadgetfs.h
src/host/: commands_service.c  device_list.c  device_list.h  recovery.c  tokenstorage.c  usb-linux.c
src/lib/: buffer.c
src/lib/cksum/: adler32.c  sha1.c  zlib.h
src/novacom/: buf_queue.c  commands.c  commands_device.c  lib.c  mux.c  mux.h  novacom_p.h  packet.c  packet.h  packet_struct.h
